<resources>
    <string name="app_name">FirebaseChat</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="continue_button">Continue</string>
    <string name="enter_otp">Enter OTP</string>

    <string name="web_client_id">317042212779-n95t1aub4gjouidjhpvrq1654phd0bvi.apps.googleusercontent.com</string>
    <string name="google_sign_in">Google Sign-In</string>
    <string name="google_sign_in_firebase">Google Sign In Firebase</string>
    <string name="username">Username</string>
    <string name="message">Message</string>
    <string name="delete_for_everyone">Delete For Everyone</string>
    <string name="cancel">Cancel</string>
    <string name="delete_for_me">Delete For Me</string>
    <string name="delivery_status">delivery status</string>

    <string name="delete_message">Delete Message</string>
</resources>