<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="5dp">


    <TextView
        android:id="@+id/textViewDeleteForEveryone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_for_everyone" />

    <TextView
        android:id="@+id/textViewCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:text="@string/cancel" />

    <TextView
        android:id="@+id/textViewDeleteForMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_for_me" />
</LinearLayout>